syntax = "proto3";

package auth;

option go_package = "./services/user_service/service/pb";

import "google/protobuf/timestamp.proto";

message GetMyProfileReq {
    int64 id = 1;
}

message GetMyProfileRes {
    int64 id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    google.protobuf.Timestamp createTime = 5;
    bool isActive = 6;
    string countryCode = 7;
    string mobile = 8;
    string about = 9;
    string instagram = 10;
    string twitter = 11;
    bool emailVerified = 12;
    
}

message SetMyProfileReq {
    string firstName = 1;
    string lastName = 2;
    string countryCode = 3;
    string mobileNo = 4;
    string about = 5;
    string instagram = 6;
    string twitter = 7;
    string email = 8;
    int64 id = 9;
}

message SetMyProfileRes {
    int64 status = 1;
    string error = 2;
    int64 id = 3;
}

message UploadProfilePicReq {
	bytes data = 1;
    int64 id = 2;
}

message UploadProfilePicRes {
    int64 status = 1;
    string error = 2;
    int64 id = 3;
}

message GetProfilePicReq {
	int64 id = 1;
}

message GetProfilePicRes {
	bytes data = 1;
}

message DeleteMyAccountReq {
	int64 id = 1;
}

message DeleteMyAccountRes {
    int64 status = 1;
    string error = 2;
    int64 id = 3;
}

service UserService {
    rpc GetMyProfile(GetMyProfileReq) returns (GetMyProfileRes) {};
    rpc SetMyProfile(SetMyProfileReq) returns (SetMyProfileRes) {};
    rpc UploadProfile(stream UploadProfilePicReq) returns (UploadProfilePicRes) {};
	rpc Download(GetProfilePicReq) returns (stream GetProfilePicRes) {};
    rpc DeleteMyProfile(DeleteMyAccountReq) returns (DeleteMyAccountRes) {};
}